# kompex-sqlite-wrapper

./: CMakeLists.txt
example/: main.cpp
gtest/: test_KompexSQLiteWrapper.cpp
